[gd_scene load_steps=2 format=2]

[ext_resource path="res://SecondChance.gd" type="Script" id=1]

[node name="SecondChance" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SecondChanceTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SecondChanceTimer" to="." method="_on_SecondChanceTimer_timeout"]
